<resources>
    <string name="app_name">External Londri Shops</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="enter_londri">Welcome to Your Londri</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="note">Outsource Your Londri Related  Work To Professionals.</string>
    <string name="slogan">Fresh Clothes, Fresh Life</string>
    <string name="todo">TODO</string>
    <string name="enter_otpp">OTP</string>
    <string name="require_mob_no">Mobile Number Required</string>
    <string name="required_otp">OTP is Required</string>
    <string name="incorrect_otp">Entered OTP is Incorrect</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify OTP</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="network_problem">Network Problem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">User Name</string>
    <string name="edit">edit</string>
    <string name="customerid">CustId:</string>
    <string name="welcome">#custId</string>
    <string name="addressdetails">Address Details</string>
    <string name="add_new">Add New</string>
    <string name="defaulte">default</string>
    <string name="address">User Address</string>
    <string name="select_tag">Select Address Type</string>
    <string name="profile_saved">Profile Saved</string>
    <string name="required_field">Required Field</string>
    <string name="postal_code">Pin Code</string>
    <string name="address1">Shop No/Building</string>
    <string name="address2">Road/Area</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="office">Shop</string>
    <string name="tab">\u0009</string>
    <string name="naubour">Other</string>
    <string name="save">Save</string>
    <string name="edit_profile">Profile Details</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="washnfold1day"><![CDATA[Wash & Fold]]></string>
    <string name="day1">(1 days)</string>
    <string name="washniron1day"><![CDATA[Wash & Iron]]></string>
    <string name="washnhang1day"><![CDATA[Wash & Hang]]></string>
    <string name="dryclean">Dry Clean</string>
    <string name="iron">Iron Only</string>
    <string name="day2">(2 days)</string>
    <string name="londri_name">Name</string>
    <string name="home_label">Orders</string>
    <string name="remaining_order">Remaining</string>
    <string name="londri_service">Services you offer</string>
    <string name="deliverd_order">Delivered</string>
    <string name="c99">99</string>
    <string name="todys_business">Today\'s Business</string>
    <string name="channel_name">shopNotification</string>
    <string name="channel_description">Shop New Order Arrived</string>
    <string name="your_order">Your Orders</string>
    <string name="add_filter">Add Filter</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="orderid">Order:</string>
    <string name="zero">0</string>
    <string name="adult">Adult</string>
    <string name="kid">Kids</string>
    <string name="house">Household</string>
    <string name="pdelivery">Delivery Charges</string>
    <string name="total">Total</string>
    <string name="rs20">99</string>
    <string name="pickup_details">Pickup Details</string>
    <string name="bag_no">Bag</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="order_details">Order Details</string>
    <string name="back_to_order">Order Details</string>
    <string name="payments">Payments</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="shopName">Shop Name</string>
    <string name="bankdetails">Bank Details</string>
    <string name="servicedetails">Service Details</string>
    <string name="title_activity_service_price_view">ServicePriceView</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="price">Price</string>
    <string name="title_activity_shop_marcker">Shop Location</string>
    <string name="map">Map Location</string>
    <string name="channel_id">LONDRI</string>
    <string name="gst_details">GST Detauls</string>
    <string name="update_gst">Update GST Details</string>
    <string name="gst_no">GST No.</string>
    <string name="note_gst">Note:</string>
    <string name="note_gst_detail">GST charges will be applied on every order to the user.</string>
    <string name="londri">Londri</string>
    <string name="dotio">.io</string>
    <string name="fresh_loth_fresh_life">Fresh clothes, Fresh life</string>
    <string name="Services">Services</string>
    <string name="Prime_Londri">Prime Londri</string>
    <string name="today_earning_title">Total business:</string>
    <string name="Previous_Transactions">Previous Transactions</string>
    <string name="View_All"><u>View All</u></string>
    <string name="Total_Payment">Total Payment</string>
    <string name="Orders">Orders</string>
    <string name="Monday">Monday</string>
    <string name="Jan">January 01, 2019  12:00AM</string>
    <string name="hey_amigo">Hey Amigo</string>
    <string name="photos">Photos</string>
    <string name="pickup">Pickup</string>
    <string name="date">Date</string>
    <string name="zero_reviews">(0 Reiew)</string>
    <string name="pickup_delivery_by">Pickup-Deliver By</string>
    <string name="Price">Price</string>
    <string name="Items">Items</string>
    <string name="Cloths">Clothes</string>
    <string name="message">message</string>
    <string name="View_Clothes">View Clothes</string>
    <string name="Change_Prices">Change Prices</string>
    <string name="instruction_0">View Clothes and Change Prices Accordingly. You  can prices you set in range (i.e Saree – 60–200 $ )</string>
    <string name="gst_tax">GST TAX (0%)</string>
    <string name="offer_applied">Offer Applied (0%)</string>
    <string name="Shop_Status">Shop Status</string>
    <string name="laundry_cloths">Laundry Clothes</string>
    <string name="loading">Loading …</string>
    <string name="Confirm">Confirm</string>
    <string name="Note">Note:</string>
    <string name="instruction_1">You can only set prices for clothes in range  (i.e Saree – 60–200 $ )</string>
    <string name="Edit_Clothes_prices">Edit Clothes Prices</string>
    <string name="contact_details">Contact Details</string>
    <string name="Address_Details">Address Details</string>
    <string name="Bank_Details">Bank Details</string>
    <string name="GST_number">GST number</string>
    <string name="Select_Services">Select Services</string>
    <string name="set_your_location">&#160; Set Your Location</string>
    <string name="Account_type">Account type</string>
    <string name="IFSC_Code">IFSC Code</string>
    <string name="Account_Number">Account Number</string>
    <string name="Bank_Name">Bank Name</string>
    <string name="Holder_Name">Holder Name</string>
    <string name="Branch_Name">Branch Name</string>
    <string name="update">update</string>
    <string name="Weekly_Off">Weekly Off</string>
    <string name="Your_Profile">Your Profile</string>
    <string name="Settings">Settings</string>
    <string name="Offer_and_Programs">Offer &amp; Programs</string>
    <string name="Add_Offers">Add Offers</string>
    <string name="ticket_and_issues">Ticket &amp; Issues</string>
    <string name="Advertiement">Advertisement</string>
    <string name="Priority_Listing">Priority Listing</string>
    <string name="Banner_Ad">Banner Ad</string>
    <string name="About">About</string>
    <string name="About_Us">About Us</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Terms_and_Condition">Terms &amp; Condition</string>
    <string name="Privacy_and_Terms_Of_Use">CDATA[Privacy &amp; Terms Of Use</string>
    <string name="made_with">made with</string>
    <string name="in_india">in india</string>
    <string name="app_version">App  Version: V 10.03</string>
    <string name="First_Asked_Questions">First Asked Questions</string>
    <string name="feature_wll_be_added_soon">Feature will be added soon</string>
    <string name="londri_nm">londri</string>
    <string name="Grow_your_Laundry_business_with_us">Grow your Laundry business with us</string>
    <string name="confirm_your_new_number">confirm your number</string>
    <string name="not_received">Not Received?</string>
    <string name="Resend_otp">Resent OTP</string>
    <string name="otp_resent">OTP resent</string>
    <string name="Go_Back">Go Back</string>
    <string name="Branch_Name_">Branch Name:</string>
    <string name="Account_No_">Account No:</string>
    <string name="Account_Holder_">Account Holder:</string>
    <string name="Account_Type_">Account Type:</string>
    <string name="IFSC_Code_">IFSC Code:</string>
    <string name="Bank_Name_">Bank Name:</string>
    <string name="Go_To_Customer_Locations">Go To Customer Location</string>
    <string name="userDetails">User Details</string>
    <string name="proccesing">(Proccesing)</string>
    <string name="some_text_here">some text here</string>
</resources>
