<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mySchoolrLogo"
            android:layout_width="134dp"
            android:layout_height="138dp"
            android:elevation="10dp"
            android:translationZ="10dp"
            android:contentDescription="@string/zero" />

        <LinearLayout
            android:id="@+id/welcmlogoname"
            android:layout_marginTop="27dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/londri_nm"
                android:fontFamily="@font/poppins_black"
                android:textColor="@color/black"
                android:textSize="38sp"
                android:translationZ="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dotio"
                android:textColor="@color/figmaGreen"
                android:fontFamily="@font/poppins_black"
                android:textSize="38sp"
                android:translationZ="10dp" />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_16"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:text="@string/slogan" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>