<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_3"
    tools:context=".activity.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_xlarge"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/slogan"
                android:textSize="@dimen/text_size_large" />

            <ImageView
                android:id="@+id/imageView"

                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:contentDescription="@string/todo"
                android:src="@drawable/playstore_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"

                android:layout_marginLeft="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/enter_londri"
                android:textSize="@dimen/text_size_large" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_60">

                    <EditText
                        android:id="@+id/edtMobileNo"
                        style="@style/my_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:ems="12"
                        android:hint="@string/mobile_no"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_60">

                    <EditText
                        android:id="@+id/edtOTP"
                        style="@style/my_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:ems="12"
                        android:hint="@string/enter_otpp"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large">

                <Button
                    android:id="@+id/btnSendOtp"
                    style="@style/my_button_style"
                    android:layout_width="@dimen/button_size_large"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:background="@drawable/button_shape"
                    android:text="@string/send_otp"
                    />

                <Button
                    android:id="@+id/btnVerifyOtp"
                    style="@style/my_button_style"
                    android:layout_width="@dimen/button_size_large"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:background="@drawable/button_shape"
                    android:text="@string/verify"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/btnSendOtp"
                    android:layout_alignEnd="@+id/btnSendOtp"
                    android:layout_marginStart="75dp"
                    android:layout_marginEnd="75dp"
                    android:background="@drawable/button_shape"
                    android:visibility="gone" />
            </RelativeLayout>
            <!--<com.vikisoft.londri.util.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />-->


            <TextView
                android:layout_width="337dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity=""
                android:text="@string/note" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>