<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <RelativeLayout
        android:id="@+id/toolbar_rl"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/zero"
            android:src="@drawable/ic_back"
            android:tint="@color/black"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="13dp"
            android:alpha="0.3"
            android:background="@drawable/button_shape_round_white"
            android:backgroundTint="#F2994A"
            android:contentDescription="@string/zero"
            android:elevation="2dp"
            android:translationZ="2dp" />

        <TextView
            android:id="@+id/out_for_delivery_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/back"
            android:text="@string/Select_Services"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="14dp"
            android:layout_marginStart="24dp"
            />

    </RelativeLayout>






    <ImageView
        android:id="@+id/option"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
        android:backgroundTint="#4DF2994A"
        android:padding="5dp"
        android:visibility="gone"
        />




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@+id/toolbar_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="43dp"
        android:layout_above="@+id/note_layout"
        />

    <RelativeLayout
        android:id="@+id/note_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/note_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Note"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/length_30"
            />

        <TextView
            android:id="@+id/note_tv"
            android:layout_below="@+id/note_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose only those services that you offers at
present times."
            android:layout_marginEnd="41dp"
            android:layout_marginBottom="@dimen/length_30"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/length_30"
            />

    </RelativeLayout>

</RelativeLayout>